[package]
name = "rendertime-wasm"
version = "0.1.0"
edition = "2021"


[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
yew = "0.19.3"
wasm-bindgen = "0.2.67"
serde = "1"
serde_derive = "1"
serde_json = "1"
anyhow = "1"
yew-router = "0.16.0"

[dependencies.web-sys]
version = "0.3"
features = [
	"HtmlInputElement",
]